# libcdaydiff

./: .gitignore  CMakeLists.txt  Makefile  readme  snapcat.md  test.c
.github/workflows/: build.yml  docs.yml
docs/: README.md  _sidebar.md  config.yml  index.html
docs/content/: api-reference.md  contac.md  contributing.md  example.md  format-specifier.md  index.md  installation.md  license.md  quick-start.md  thread-savety.md
docs/pages/: api-reference.md  contac.md  contributing.md  example.md  format-specifier.md  installation.md  license.md  quick-start.md  thread-savety.md
src/: comparison.c  core.c  diff.c  epoch.c  error.c  fmt.c  info.c  manip.c  parser.c  tz.c
src/include/: libcdaydiff.h
src/internal/: libcdaydiff_internal.h
